--- a/expenses eng.html
+++ b/expenses eng.html
@@ -228,8 +228,8 @@
             <div class="row">
                 <div class="col-sm-3 me-5 d-sm-flex align-items-end">
                     <div>
-                        <p id="need" class="display-5 lh-1 mb-0 text-shadow">need</p>
-                        <p id="help" class="display-3 text-shadow lh-0 mb-0">help?</p>
+                        <p id="need" class="display-6 lh-1 mb-0 text-shadow">need</p>
+                        <p id="help" class="display-5 text-shadow lh-0 mb-0">help?</p>
                     </div>
                 </div>
                 <div class="col-sm-9 ps-5 d-sm-flex align-items-center">
@@ -267,18 +267,18 @@
         function resizeText(width) {
             if (width < 576) {
                 jQuery(".main-heading").fitText(0.9);
-                $("#need").removeClass("display-5");
-                $("#help").removeClass("display-3");
-                $("#need").addClass("display-6");
-                $("#help").addClass("display-5");
+                // $("#need").removeClass("display-5");
+                // $("#help").removeClass("display-3");
+                // $("#need").addClass("display-6");
+                // $("#help").addClass("display-5");
             } else {
                 $(".main-heading").fitText(1.2, {maxFontSize: "110px"})
-                if ($("#need").hasClass("display-5")) {
-                    $("#need").addClass("display-5");
-                    $("#help").addClass("display-3");
-                    $("#need").removeClass("display-6");
-                    $("#help").removeClass("display-5");
-                }
+                // if ($("#need").hasClass("display-5")) {
+                //     $("#need").addClass("display-5");
+                //     $("#help").addClass("display-3");
+                //     $("#need").removeClass("display-6");
+                //     $("#help").removeClass("display-5");
+                // }
                 
             }
         }
