--- a/lifestyle eng.html
+++ b/lifestyle eng.html
@@ -33,7 +33,7 @@
         <div class="container-fluid padding">
             <div>
                 <p>
-                As part of our continued focus on Total Wellness, CMC provides up to $500 annually to each BCBS eligible employee to be used for themselves and/or their eligible dependent(s) on a wide range of products and services. For a complete list, check out the back of this flyer or visit <span class="text-blue">healthequity.com</span>.
+                As part of our continued focus on Total Wellness, CMC provides up to $500 annually to each BCBS eligible employee to be used for themselves and/or their eligible dependent(s) on a wide range of products and services. For a complete list, check out the back of this flyer or visit <span class="text-blue font-weight-bold">healthequity.com</span>.
             </p>
             </div>
             
@@ -64,13 +64,10 @@
                                     Looking for an app to help you lose weight?
                                 </li>
                                 <li class="small">
-                                    Had your eye on a treadmill or elliptical
-                                    machine?
+                                    Had your eye on a treadmill or elliptical machine?
                                 </li>
                                 <li class="small">
-                                    Want your child to have less screen time & be
-                                    more active? Sign them up for tennis lessons or
-                                    a baseball team!
+                                    Want your child to have less screen time & be more active? Sign them up for tennis lessons or a baseball team!
                                 </li>
                             </ul>
                         </div>
@@ -93,9 +90,7 @@
                         <div class="mt-1 mx-0 px-0">
                             <ul>
                                 <li class="small">
-                                    Have questions about credit
-                                    monitoring or credit repair? Talk to a
-                                    financial advisor or attend a seminar!
+                                    Have questions about credit monitoring or credit repair? Talk to a financial advisor or attend a seminar!
                                 </li>
                                 <li class="small">
                                     Need help repaying your student loans?
@@ -123,14 +118,10 @@
                         <div class="mt-1 mx-0 px-0">
                             <ul>
                                 <li class="small">
-                                    Want to get active outdoors to refresh your
-                                    mental health? Get your hunting or fishing
-                                    license!
-
+                                    Want to get active outdoors to refresh your mental health? Get your hunting or fishing license!
                                 </li>
                                 <li class="small">
-                                    Need help improving your nutrition habits? Talk
-                                    to a nutritionist!
+                                    Need help improving your nutrition habits? Talk to a nutritionist!
                                 </li>
                                 <li class="small">
                                     Thinking about trying a meditation app or class?
@@ -170,10 +161,7 @@
                         <div class="d-flex">
                             <p class="mphone">
                                 <small>
-                                    Download the free EZ Receipts mobile app to access
-                                    your accounts, check balances, submit claims, and
-                                    snap and submit photos of receipts! *<em>Online registration
-                                    required before using the app</em>.
+                                    Download the free EZ Receipts mobile app to access your accounts, check balances, submit claims, and snap and submit photos of receipts! *<em>Online registration required before using the app</em>.
                                 </small>
                             </p>
                         </div>
@@ -250,13 +238,11 @@
                         </small>
                     </p>
                     <h6 class="mb-0 text-blue">What happens if I terminate employment before filing my claim?</h6>
-                    <div class="d-flex">
-                        <p>
-                            <small>
-                                Eligibility ends when an employee terminates. Any unused funds are forfeited.
-                            </small>
-                        </p>
-                    </div>
+                    <p>
+                        <small>
+                            Eligibility ends when an employee terminates. Any unused funds are forfeited.
+                        </small>
+                    </p>
                 </div>
             </div>
         </section>
@@ -268,8 +254,8 @@
             <div class="row">
                 <div class="col-sm-3 me-5 d-sm-flex align-items-end">
                     <div>
-                        <p id="need" class="display-5 lh-1 mb-0 text-shadow">need</p>
-                        <p id="help" class="display-3 text-shadow lh-0 mb-0">help?</p>
+                        <p id="need" class="display-6 lh-1 mb-0 text-shadow">need</p>
+                        <p id="help" class="display-5 text-shadow lh-0 mb-0">help?</p>
                     </div>
                 </div>
                 <div class="col-sm-9 ps-5 d-sm-flex align-items-center">
@@ -308,19 +294,19 @@
             if (width < 576) {
                 jQuery(".main-heading").fitText(0.9);
                 jQuery(".main-text").fitText(1.2);
-                $("#need").removeClass("display-5");
-                $("#help").removeClass("display-3");
-                $("#need").addClass("display-6");
-                $("#help").addClass("display-5");
+                // $("#need").removeClass("display-5");
+                // $("#help").removeClass("display-3");
+                // $("#need").addClass("display-6");
+                // $("#help").addClass("display-5");
             } else {
                 $(".main-heading").fitText(1.2, {maxFontSize: "110px"})
                 $(".main-text").fitText(2.2, {maxFontSize: "80px"})
-                if ($("#need").hasClass("display-5")) {
-                    $("#need").addClass("display-5");
-                    $("#help").addClass("display-3");
-                    $("#need").removeClass("display-6");
-                    $("#help").removeClass("display-5");
-                }
+                // if ($("#need").hasClass("display-5")) {
+                //     $("#need").addClass("display-5");
+                //     $("#help").addClass("display-3");
+                //     $("#need").removeClass("display-6");
+                //     $("#help").removeClass("display-5");
+                // }
                 
             }
         }
