--- a/FAQs eng.html
+++ b/FAQs eng.html
@@ -91,13 +91,13 @@
         </section>
         
         <!-- Footer -->
-        <footer class="footer mt-auto bg-gray py-2 padding mt-3">
+        <footer class="bg-gray py-2 padding">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-sm-3 me-5 d-sm-flex align-items-end">
                         <div>
-                            <p id="need" class="display-5 lh-1 mb-0 text-shadow">need</p>
-                            <p id="help" class="display-3 text-shadow lh-0 mb-0">help?</p>
+                            <p id="need" class="display-6 lh-1 mb-0 text-shadow">need</p>
+                            <p id="help" class="display-5 text-shadow lh-0 mb-0">help?</p>
                         </div>
                     </div>
                     <div class="col-sm-9 ps-5 d-sm-flex align-items-center">
@@ -135,20 +135,19 @@
                 if (width < 576) {
                     jQuery(".main-heading").fitText(0.9);
                     jQuery(".main-text").fitText(1.2);
-                    $("#need").removeClass("display-5");
-                    $("#help").removeClass("display-3");
-                    $("#need").addClass("display-6");
-                    $("#help").addClass("display-5");
+                    // $("#need").removeClass("display-5");
+                    // $("#help").removeClass("display-3");
+                    // $("#need").addClass("display-6");
+                    // $("#help").addClass("display-5");
                 } else {
-                    $(".main-heading").fitText(1, {maxFontSize: "110px"})
+                    $(".main-heading").fitText(1.5, {maxFontSize: "110px"})
                     $(".main-text").fitText(2.5, {maxFontSize: '80px'})
-                    if ($("#need").hasClass("display-5")) {
-                        $("#need").addClass("display-5");
-                        $("#help").addClass("display-3");
-                        $("#need").removeClass("display-6");
-                        $("#help").removeClass("display-5");
-                    }
-                    
+                    // if ($("#need").hasClass("display-5")) {
+                    //     $("#need").addClass("display-5");
+                    //     $("#help").addClass("display-3");
+                    //     $("#need").removeClass("display-6");
+                    //     $("#help").removeClass("display-5");
+                    // }
                 }
             }
             $(document).ready(function(){
