--- a/FAQs eng.html
+++ b/FAQs eng.html
@@ -20,8 +20,8 @@
         <link href="styles.css" rel="stylesheet">
     </head>
     <body>
-        <div class="padding">
-            <div id="header" class="container-fluid border-green px-0">
+        <div>
+            <div id="header" class="container-fluid border-green px-0 margin">
                 <h1 class="display-2 text-blue main-heading">Frequently Asked Questions</h1>
                 <p class="display-6 font-weight-normal text-blue main-text">
                     Livongo for Diabetes, High Blood Pressure & Heart Disease
@@ -30,8 +30,8 @@
         </div>
 
         <!-- Questions -->
-        <section class="main padding mt-3">
-            <div class="row">
+        <section class="main mt-3">
+            <div class="row margin">
                 <div class="col-md-6">
                     <div>
                         <p class="text-blue font-weight-bold mb-0">
