--- a/Livongo spa.html
+++ b/Livongo spa.html
@@ -20,22 +20,24 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <div class="padding">
-        <div id="header" class="container-fluid border-green px-0">
+    <div>
+        <div id="header" class="container-fluid border-green px-0 margin">
             <h1 class="display-1 text-blue main-heading">livongo</h1>
             <p class="display-6 font-weight-normal text-blue main-text">proporcionar manejo de las condiciones crónicas</p>
         </div>
     </div>
     <div class="main">
         <!-- Did you know ? -->
-        <section class="mt-3 padding">
-            <h4 class="text-orange text-uppercase font-weight-normal">
-                ¿SABÍAS QUE?
-            </h4>
+        <section class="mt-3">
+            <div class="margin">
+                <h4 class="text-orange text-uppercase font-weight-normal">
+                    ¿SABÍAS QUE?
+                </h4>
+            </div>
 
             <!-- Icons -->
             <section>
-                <div class="row">
+                <div class="row margin">
                     <div class="col-md-3 col-sm-6">
                         <div class="wrapper" style="border-bottom: 10px solid #53b7e8">
                             <div class="card-container border-0 bg-card px-2 text-center mt-3">
@@ -93,8 +95,8 @@
         </section>
 
         <!-- Help + Download -->
-        <section class="mt-3 padding">
-            <div class="row">
+        <section class="mt-3">
+            <div class="row margin">
                 <div class="col-md-8">
                     <h4 class="text-orange text-uppercase font-weight-normal">
                         CÓMO LIVONGO PUEDE AYUDAR
@@ -152,8 +154,8 @@
         </section>
 
         <!-- Block -->
-        <section class="my-3 padding">
-            <div class="row">
+        <section class="my-3">
+            <div class="row margin">
                 <div class="col-md-8">
                     <div class="row align-items-center" style="border-left: 10px solid #f58220">
                         <p class="text-blue font-weight-bold">En CMC, nos preocupamos por usted y queremos que obtenga el apoyo que necesita.</p>
@@ -204,7 +206,6 @@
                 </div>
             </div>
         </section>
-        
     </div>
 
     <!-- Footer -->
