--- a/lifestyle spa.html
+++ b/lifestyle spa.html
@@ -20,8 +20,8 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <div class="padding">
-        <div id="header" class="container-fluid border-green px-0">
+    <div>
+        <div id="header" class="container-fluid border-green px-0 margin">
             <h1 class="display-1 text-blue main-heading">beneficio del estilo de vida</h1>
             <p class="display-6 font-weight-normal text-blue main-text">promover la salud, la riqueza y el bienestar</p>
         </div>
@@ -30,19 +30,17 @@
 
     <!-- Main -->
     <div class="main mt-3">
-        <div class="container-fluid padding">
-            <div>
+        <div class="container-fluid">
+            <div class="margin">
                 <p>
                 Como parte de nuestro continuo enfoque en Bienestar Total, CMC proporciona hasta $500 anualmente a cada empleado elegible de BCBS para ser usado para sí mismo y/o sus dependientes elegibles en una amplia gama de productos y servicios. Para obtener una lista completa, consulte la parte posterior de este folleto o visite <span class="text-blue font-weight-bold">healthequity.com</span>.
             </p>
             </div>
-            
         </div>
         
-
         <!-- Icons -->
-        <section class="container-fluid padding">
-            <div class="row">
+        <section class="container-fluid">
+            <div class="row margin">
                 <div class="col-md-6 col-lg-4">
                     <div class="p-4 pb-0 h-md-100 m-0">
                         <div class="d-flex p-xl-2 pb-0">
@@ -135,8 +133,8 @@
         </section>
 
         <!-- Account Registeration -->
-        <section id="accountReg" class="mt-3 padding bg-gray">
-            <div class="container-fluid py-3">
+        <section id="accountReg" class="mt-3 bg-gray">
+            <div class="container-fluid py-3 margin">
                 <h4 class="text-orange font-weight-normal">
                     REGISTRO DE LA CUENTA & INFORMACIÓN DE RECLAMACIONES
                 </h4>
@@ -208,44 +206,46 @@
         </section>
 
         <!-- FAQS -->
-        <section id="faqs" class="container-fluid py-3 mt-3 padding">
-            <h4 class="text-orange font-weight-normal text-uppercase">preguntas más frecuentes</h4>
-            <div class="row">
-                <div class="col-md-6">
-                    <h6 class="mb-0 text-blue">¿Quién es elegible?</h6>
-                    <p>
-                        <small>
-                            Todos los empleados eligibles para BCBS, independientemente del estado de inscripción o la fecha de contratación, reciben este beneficio.
-                        </small>
-                    </p>
-                    <h6 class="mb-0 text-blue">¿Puedo usar mi beneficio para mis dependientes?</h6>
-                    <p>
-                        <small>
-                            La contribución máxima total de $500 se puede utilizar para gastos elegibles aprobados para usted y/o sus dependientes elegibles. Se pueden enviar varias solicitudes para usted y/o sus dependientes hasta que se haya pagado el reembolso máximo total de $500.
-                        </small>
-                    </p>
-                </div>
-                <div class="col-md-6">
-                    <h6 class="mb-0 text-blue">¿Recibiré una tarjeta de débito del programa?</h6>
-                    <p>
-                        <small>
-                            No, sólo puede presentar una reclamación en línea, a través del app o por fax o correo.
-                        </small>
-                    </p>
-                    <h6 class="mb-0 text-blue">¿Qué sucede con mi saldo al final del año?</h6>
-                    <p>
-                        <small>
-                            ¡Úsalo o piérdalo! Su saldo no se revierte. Todos los fondos deben usarse antes del 31 de diciembre y las reclamaciones deben presentarse antes del 31 de marzo del año siguiente
-                        </small>
-                    </p>
-                    <h6 class="mb-0 text-blue">
-                        ¿Qué pasa si termino el empleo antes de presentar mi reclamación?
-                    </h6>
-                    <p>
-                        <small>
-                            La elegibilidad termina cuando un empleado termina. Los fondos no utilizados se pierden.
-                        </small>
-                    </p>
+        <section id="faqs" class="container-fluid py-3 mt-3">
+            <div class="margin">
+                <h4 class="text-orange font-weight-normal text-uppercase">preguntas más frecuentes</h4>
+                <div class="row">
+                    <div class="col-md-6">
+                        <h6 class="mb-0 text-blue">¿Quién es elegible?</h6>
+                        <p>
+                            <small>
+                                Todos los empleados eligibles para BCBS, independientemente del estado de inscripción o la fecha de contratación, reciben este beneficio.
+                            </small>
+                        </p>
+                        <h6 class="mb-0 text-blue">¿Puedo usar mi beneficio para mis dependientes?</h6>
+                        <p>
+                            <small>
+                                La contribución máxima total de $500 se puede utilizar para gastos elegibles aprobados para usted y/o sus dependientes elegibles. Se pueden enviar varias solicitudes para usted y/o sus dependientes hasta que se haya pagado el reembolso máximo total de $500.
+                            </small>
+                        </p>
+                    </div>
+                    <div class="col-md-6">
+                        <h6 class="mb-0 text-blue">¿Recibiré una tarjeta de débito del programa?</h6>
+                        <p>
+                            <small>
+                                No, sólo puede presentar una reclamación en línea, a través del app o por fax o correo.
+                            </small>
+                        </p>
+                        <h6 class="mb-0 text-blue">¿Qué sucede con mi saldo al final del año?</h6>
+                        <p>
+                            <small>
+                                ¡Úsalo o piérdalo! Su saldo no se revierte. Todos los fondos deben usarse antes del 31 de diciembre y las reclamaciones deben presentarse antes del 31 de marzo del año siguiente
+                            </small>
+                        </p>
+                        <h6 class="mb-0 text-blue">
+                            ¿Qué pasa si termino el empleo antes de presentar mi reclamación?
+                        </h6>
+                        <p>
+                            <small>
+                                La elegibilidad termina cuando un empleado termina. Los fondos no utilizados se pierden.
+                            </small>
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
