--- a/expenses eng.html
+++ b/expenses eng.html
@@ -21,14 +21,14 @@
 </head>
 <body>
     <div class="padding">
-        <div id="header" class="container-fluid border-green px-0">
+        <div id="header" class="container-fluid border-green px-0 margin">
             <h1 class="display-2 text-blue main-heading">Expense List</h1>
         </div>
     </div>
 
     <!-- Main -->
-    <div class="main padding mt-3 container-fluid">
-        <div class="row">
+    <div class="main mt-3 container-fluid">
+        <div class="row margin">
             <div class="col-md-6">
                 <div class="mb-5">
                     <h4 class="text-orange">
