--- a/lifestyle eng up.html
+++ b/lifestyle eng up.html
@@ -151,8 +151,8 @@
         </div>
     </header>
 
-    <div class="padding mt-3">
-        <div id="header" class="container-fluid border-green px-0">
+    <div class= "mt-3">
+        <div id="header" class="container-fluid border-green px-0 margin">
             <h1 class="display-1 text-blue main-heading">lifestyle benefits</h1>
             <p class="display-6 font-weight-normal text-blue main-text">promoting health, wealth & wellbeing</p>
         </div>
@@ -161,19 +161,19 @@
 
     <!-- Main -->
     <div class="main mt-3">
-        <div class="container-fluid padding">
-            <div>
+        <div class="container-fluid">
+            <div class="margin">
                 <p>
-                As part of our continued focus on Total Wellness, CMC provides up to $500 annually to each BCBS eligible employee to be used for themselves and/or their eligible dependent(s) on a wide range of products and services. For a complete list, check out the back of this flyer or visit <span class="text-blue font-weight-bold">healthequity.com</span>.
-            </p>
+                    As part of our continued focus on Total Wellness, CMC provides up to $500 annually to each BCBS eligible employee to be used for themselves and/or their eligible dependent(s) on a wide range of products and services. For a complete list, check out the back of this flyer or visit <span class="text-blue font-weight-bold">healthequity.com</span>.
+                </p>
             </div>
             
         </div>
         
 
         <!-- Icons -->
-        <section class="container-fluid padding">
-            <div class="row">
+        <section class="container-fluid">
+            <div class="row margin">
                 <div class="col-md-6 col-lg-4">
                     <div class="p-4 pb-0 h-md-100 m-0">
                         <div class="d-flex p-xl-2 pb-0">
@@ -265,8 +265,8 @@
         </section>
 
         <!-- Account Registeration -->
-        <section id="accountReg" class="mt-3 padding bg-gray">
-            <div class="container-fluid py-3">
+        <section id="accountReg" class="mt-3 bg-gray">
+            <div class="container-fluid py-3 margin">
                 <h4 class="text-orange font-weight-normal">ACCOUNT REGISTRATION & CLAIMS INFORMATION</h4>
                 <div class="row">
                     <div class="col-md-6">
@@ -338,46 +338,47 @@
         </section>
 
         <!-- FAQS -->
-        <section id="faqs" class="container-fluid py-3 mt-3 padding">
-            <h4 class="text-orange font-weight-normal">FREQUENTLY ASKED QUESTIONS</h4>
-            <div class="row">
-                <div class="col-md-6">
-                    <h6 class="mb-0 text-blue">Who is eligible?</h6>
-                    <p>
-                        <small>
-                            All BCBS eligible employees, regardless of enrollment status or hire date, are provided this benefit.
-                        </small>
-                    </p>
-                    <h6 class="mb-0 text-blue">Can my Lifestyle Benefit be used for my dependents?</h6>
-                    <p>
-                        <small>
-                            The $500 total maximum contribution can be used for approved eligible expenses for you and/or your eligible dependent(s). Multiple claims can be submitted for yourself and/or your dependent(s) until the total maximum $500 reimbursement has been paid.
-                        </small>
-                    </p>
-                </div>
-                <div class="col-md-6">
-                    <h6 class="mb-0 text-blue">Will I receive a Lifestyle Benefit Program debit card?</h6>
-                    <p>
-                        <small>
-                            No, you can only file a claim online, via the app, or by fax or mail.
-                        </small>
-                    </p>
-                    <h6 class="mb-0 text-blue">What happens to my balance at the end of the year?</h6>
-                    <p>
-                        <small>
-                            Use it or lose it! Your balance does not roll over. All funds must be used by Dec. 31 and claims must be filed by March 31 of the following year.
-                        </small>
-                    </p>
-                    <h6 class="mb-0 text-blue">What happens if I terminate employment before filing my claim?</h6>
-                    <p>
-                        <small>
-                            Eligibility ends when an employee terminates. Any unused funds are forfeited.
-                        </small>
-                    </p>
+        <section id="faqs" class="container-fluid py-3 mt-3">
+            <div class="margin">
+                <h4 class="text-orange font-weight-normal">FREQUENTLY ASKED QUESTIONS</h4>
+                <div class="row">
+                    <div class="col-md-6">
+                        <h6 class="mb-0 text-blue">Who is eligible?</h6>
+                        <p>
+                            <small>
+                                All BCBS eligible employees, regardless of enrollment status or hire date, are provided this benefit.
+                            </small>
+                        </p>
+                        <h6 class="mb-0 text-blue">Can my Lifestyle Benefit be used for my dependents?</h6>
+                        <p>
+                            <small>
+                                The $500 total maximum contribution can be used for approved eligible expenses for you and/or your eligible dependent(s). Multiple claims can be submitted for yourself and/or your dependent(s) until the total maximum $500 reimbursement has been paid.
+                            </small>
+                        </p>
+                    </div>
+                    <div class="col-md-6">
+                        <h6 class="mb-0 text-blue">Will I receive a Lifestyle Benefit Program debit card?</h6>
+                        <p>
+                            <small>
+                                No, you can only file a claim online, via the app, or by fax or mail.
+                            </small>
+                        </p>
+                        <h6 class="mb-0 text-blue">What happens to my balance at the end of the year?</h6>
+                        <p>
+                            <small>
+                                Use it or lose it! Your balance does not roll over. All funds must be used by Dec. 31 and claims must be filed by March 31 of the following year.
+                            </small>
+                        </p>
+                        <h6 class="mb-0 text-blue">What happens if I terminate employment before filing my claim?</h6>
+                        <p>
+                            <small>
+                                Eligibility ends when an employee terminates. Any unused funds are forfeited.
+                            </small>
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
-
     </div>
     <!-- Footer -->
     <footer class="bg-gray py-2 padding">
