--- a/lifestyle eng up.html
+++ b/lifestyle eng up.html
@@ -64,7 +64,7 @@
         </div>
 
         <!-- Carousel -->
-        <div id="carousel" class="carousel slide" data-ride="carousel">
+        <!-- <div id="carousel" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carousel" data-slide-to="0" class="active"></li>
                 <li data-target="#carousel" data-slide-to="1"></li>
@@ -74,7 +74,7 @@
             </ol>
             <div class="carousel-inner h-100 d-flex">
                 <div class="carousel-item active pt-4">
-                    <!-- <img src="bg-header.jpg" class="d-block w-100" alt="..."> -->
+                    <img src="bg-header.jpg" class="d-block w-100" alt="...">
                     <div class="w-100 text-center">
                         <h5 class="d-inline px-sm-5" style="border-bottom: 3px solid #00aeef;; color: #6690b2;">
                             Get brand name medications for FREE!
@@ -142,13 +142,13 @@
             </div>
             <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <!-- <span class="sr-only">Previous</span> -->
+                <span class="sr-only">Previous</span>
             </a>
             <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <!-- <span class="sr-only">Next</span> -->
+                <span class="sr-only">Next</span>
             </a>
-        </div>
+        </div> -->
     </header>
 
     <div class= "mt-3">
