--- a/lifestyle eng up.html
+++ b/lifestyle eng up.html
@@ -22,7 +22,7 @@
 <body>
     <!-- Header -->
     <header>
-        <nav class="navbar nav-padding navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-light margin">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <img src="logo.svg">
@@ -48,13 +48,13 @@
                     <p class="h6 text-center font-weight-normal text-green-nav mb-0">Need Help? The Employee Services Team is just a phone call away. 877.262.8050</p>
                     <!-- <p class="h2 text-green-nav mb-0">24/7/365</p> -->
                 </div>
-                <div class="col-sm-3 text-center pt-2 pt-sm-0">
+                <!-- <div class="col-sm-3 text-center pt-2 pt-sm-0">
                     <button class="btn btn-light text-dark text-uppercase enroll">enroll in benefits</button>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="bg-header padding d-flex align-items-end">
-            <div>
+            <div class="mt-3 mb-4">
                 <span class="welcome display-1 d-inline">Welcome</span>
                 <br>
                 <div class="d-flex justify-content-end">
