--- a/lifestyle eng up.html
+++ b/lifestyle eng up.html
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div class="bg-header padding d-flex align-items-end">
-            <div class="mt-5 mb-3">
+            <div class="mt-3 mb-4">
                 <span class="welcome display-1 d-inline">Welcome</span>
                 <br>
                 <div class="d-flex justify-content-end">
@@ -381,24 +381,48 @@
         </section>
     </div>
     <!-- Footer -->
-    <footer class="bg-gray py-2 padding">
+    <footer id="footer-new" class="bg-gray">
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-sm-3 me-5 d-sm-flex align-items-end">
-                    <div>
-                        <p id="need" class="display-6 lh-1 mb-0 text-shadow">need</p>
-                        <p id="help" class="display-5 text-shadow lh-0 mb-0">help?</p>
+            <div id="footer-main">
+                <div class="row align-items-center">
+                    <div class="col-lg-6 col-5 d-flex justify-content-end">
+                        <div>
+                            <div id="help-box">
+                                <p class="needHelp" style="margin-left: 5px">Need</p>
+                                <p class="needHelp">help?</p>
+                            </div>
+                            <div id="call-box">
+                                <p class="call d-inline-block">Call</p>
+                            </div>
+                        </div>
+                        
                     </div>
-                </div>
-                <div class="col-sm-9 ps-5 d-sm-flex align-items-center">
-                    <div>
-                        <p class="lead text-grey mb-1 footer-text">The Employee Services Team is a click or a call away</p>
-                        <p class="lead text-grey footer-text">
-                            Call <span class="text-blue font-weight-bold wrap">877.262.8050</span> or email <span class="text-blue font-weight-bold wrap">employeeservices@cmc.com</span>
+                    <div class="col-lg-6 col-7">
+                        <p class="footer-main-text">
+                            The Employee Services Team is just a phone call away
+                        </p>
+                        <p class="footer-main-text mt-md-5">
+                            877.262.8050
                         </p>
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="w-100" style="background-color: #A0A0A0">
+            <div class="margin">
+                <div class="d-flex justify-content-between pt-3 pb-5">
+                    <img src="logo.svg">
+                    <button class="btn text-uppercase text-white">Home</button>
+                </div>
+                <p class="mb-0 pb-5" style="color: #FFFFFF70; font-size:14px">
+                    Note: Not all employees are eligible to participate in the plans described. Eligibility is dependent on the terms of any collective bargaining agreement, employee classification and/or plan documents applicable to the individual employee.
+                </p>
+            </div>
+        </div>
+        <div class="w-100 text-center" style="background-color: #424549;">
+            <p class="py-3 mb-0" style="color: #FFFFFF47">
+                Copyright &copy;2020 Commercial Metals | <span class="text-uppercase">Content on this site is intended for U.S. benefits eligible employees</span> 
+            </p>
         </div>
     </footer>
   
