--- a/lifestyle eng up.html
+++ b/lifestyle eng up.html
@@ -46,11 +46,7 @@
             <div class="row d-flex align-items-center justify-content-center">
                 <div class="col-sm-9">
                     <p class="h6 text-center font-weight-normal text-green-nav mb-0">Need Help? The Employee Services Team is just a phone call away. 877.262.8050</p>
-                    <!-- <p class="h2 text-green-nav mb-0">24/7/365</p> -->
                 </div>
-                <!-- <div class="col-sm-3 text-center pt-2 pt-sm-0">
-                    <button class="btn btn-light text-dark text-uppercase enroll">enroll in benefits</button>
-                </div> -->
             </div>
         </div>
         <div class="bg-header padding d-flex align-items-end">
@@ -62,93 +58,6 @@
                 </div>
             </div>
         </div>
-
-        <!-- Carousel -->
-        <!-- <div id="carousel" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carousel" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel" data-slide-to="1"></li>
-                <li data-target="#carousel" data-slide-to="2"></li>
-                <li data-target="#carousel" data-slide-to="3"></li>
-                <li data-target="#carousel" data-slide-to="4"></li>
-            </ol>
-            <div class="carousel-inner h-100 d-flex">
-                <div class="carousel-item active pt-4">
-                    <img src="bg-header.jpg" class="d-block w-100" alt="...">
-                    <div class="w-100 text-center">
-                        <h5 class="d-inline px-sm-5" style="border-bottom: 3px solid #00aeef;; color: #6690b2;">
-                            Get brand name medications for FREE!
-                        </h5> 
-                        <div class="mt-2">
-                            <p class="text-secondary">
-                                Check out CRx International to see if your medications qualify.
-                            </p>
-                            <button class="btn text-light text-uppercase" style="background-color: #00aeef">learn more</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item pt-4">
-                    <div class="w-100 text-center">
-                        <h5 class="d-inline px-sm-5" style="border-bottom: 3px solid #d4701c; color: #6690b2;">
-                            Are you a new hire?
-                        </h5> 
-                        <div class="mt-2">
-                            <p class="text-secondary">
-                                Time Sensitive! Enroll for benefits within 31 days of hire.
-                            </p>
-                            <button class="btn text-light text-uppercase" style="background-color: #d4701c">enroll</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item pt-4">
-                    <div class="w-100 text-center">
-                        <h5 class="d-inline px-sm-5" style="border-bottom: 3px solid #00b37d;; color: #6690b2;">
-                            Have you registered for Telehealth?
-                        </h5> 
-                        <div class="mt-2">
-                            <p class="text-secondary">
-                                Get care 24/7/365 from the comfort of your own home.
-                            </p>
-                            <button class="btn text-light text-uppercase" style="background-color: #00b37d">enroll</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item pt-4">
-                    <div class="w-100 text-center">
-                        <h5 class="d-inline px-sm-5" style="border-bottom: 3px solid #fdba16; color: #6690b2;">
-                            CMC wants you to be your best!
-                        </h5> 
-                        <div class="mt-2">
-                            <p class="text-secondary">
-                                Don't delay. Schedule your annual physical today.
-                            </p>
-                            <button class="btn text-uppercase" style="background-color: #fdba16">learn more</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item pt-4">
-                    <div class="w-100 text-center">
-                        <h5 class="d-inline px-sm-5" style="border-bottom: 3px solid #ffd800; color: #6690b2;">
-                            Did you get married or have a baby?
-                        </h5> 
-                        <div class="mt-2">
-                            <p class="text-secondary">
-                                Update your benefits within 31 days.
-                            </p>
-                            <button class="btn text-uppercase" style="background-color: #ffd800">learn more</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div> -->
     </header>
 
     <div class= "mt-3">
@@ -409,8 +318,8 @@
             </div>
         </div>
         <div class="w-100" style="background-color: #A0A0A0">
-            <div class="margin">
-                <div class="d-flex justify-content-between pt-3 pb-5">
+            <div class="margin p-3">
+                <div class="d-flex align-items-center justify-content-between pt-3 pb-5">
                     <img src="logo.svg">
                     <button class="btn text-uppercase text-white">Home</button>
                 </div>
@@ -420,7 +329,7 @@
             </div>
         </div>
         <div class="w-100 text-center" style="background-color: #424549;">
-            <p class="py-3 mb-0" style="color: #FFFFFF47">
+            <p class="py-4 mb-0" style="color: #FFFFFF47">
                 Copyright &copy;2020 Commercial Metals | <span class="text-uppercase">Content on this site is intended for U.S. benefits eligible employees</span> 
             </p>
         </div>
